Index fixed, navbar stuck to bottom now also

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,7 @@ img {
 }
 body{
 
-    margin:0;
+    margin:-10px;
     padding:0;
 }
 
@@ -17,11 +17,37 @@ height: 100%;
 
 }
 
-.masthead {
-  height: 100vh;
-  min-height: 500px;
-  width: 100%;
 
+body, html {
+  height: 100%;
+}
+
+/* The hero image */
+.hero-image {
+/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+
+/* Set a specific height */
+height: 50%;
+
+/* Position and center the image to scale nicely on all screens */
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+text-align: center;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+color: white;
+}
+
+.masthead {
+  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -73,6 +99,13 @@ pos {
 }
 
 .footer {
+
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+   
+  text-align: center;
   background: #061D25;
   padding: 10px 0;
 }
@@ -195,15 +228,20 @@ pos {
     padding:0;
 }
 .navbar {
-    margin-bottom: 0;
+    padding-bottom: -10px;
+    margin-bottom: -10%;
     border: 0 !important;
 }
 
+ul.nav { margin-bottom: 0 !important; }
+
 
 .navbar navbar-expand-sm bg-dark navbar-dark fixed-top{
-
+ background-color: black
+ margin-bottom:  -50px;
  background-color : black;
  padding:0;
+
 }
 ul.social-network {
 	list-style: none;
